--- a/w3/lib/chartacaeli.css
+++ b/w3/lib/chartacaeli.css
@@ -6,38 +6,35 @@
 body { font-family: 'M PLUS Rounded 1c', sans-serif ; color: #323232 ; }
 a:hover { text-decoration: none ; color: #0056b3!important ; }
 a:active { text-decoration: none ; color: #006adb!important ; }
-.container-fluid { padding-left: 4rem ; padding-right: 4rem ; }
 .ruler-top { border: 2px solid #007bff ; }
 .ruler-sep { border-color: #007bff ; }
-* { -webkit-border-radius: 0!important ; -moz-border-radius: 0!important ; border-radius: 0!important ; } /* SO #9742166 */
 .btn { border-width: 2px ; }
-.headline { padding-top: .8rem ; } /*-md*/
+.headline { padding-top: .8rem ; }
 
 /* navigation */
-.navbar { background: rgba(0, 0, 0, .75) ; font-size: 1.4rem ; font-weight: 500 ; letter-spacing: .125rem ; } /*-md, -lg, -xl*/
-.navbar-brand img { height: 2.8rem ; } /*-md, -lg, -xl*/
+.navbar { background: rgba(0, 0, 0, .75) ; font-size: 1.4rem ; font-weight: 500 ; letter-spacing: .125rem ; }
+.navbar-brand img { height: 2.8rem ; }
 .navbar-toggler { color: #e7e7e7 ; }
-.navbar-toggler .fa-bars { font-size: 1.6rem ; } /*-md, -lg, -xl*/
+.navbar-toggler .fa-bars { font-size: 1.6rem ; }
 .navbar-nav li { padding-right: .8rem ; }
 .navbar-nav .nav-link { color: #e7e7e7 ; }
 .navbar-nav .nav-link:hover { color: #0056b3 ; }
 .navbar-nav .nav-link:active, .navbar-nav .nav-link.active { color: #006adb ; }
 /* position sections below .navbar */
-.navbar-offset::before { height: 4.4rem ; margin-top: -4.4rem ; content: "" ; display: block ; } /*-md, -lg, -xl*/
+.navbar-offset::before { height: 4.4rem ; margin-top: -4.4rem ; content: "" ; display: block ; }
 
 #ccHome { background-image: url("../starrysky.png") ; background-size: cover ; background-repeat: no-repeat ; background-position: center ; min-height: 100vh ; display: flex ; }
 .caption { color: #dadada ; }
-.caption h2 { font-size: 2.2rem ; font-weight: 500 ; } /*-md*/
-.caption-intro { padding-top: 6rem ; } /*-md*/
-.caption-outro {  }
-#ccHome .btn { margin-bottom: 2rem ; }
+.caption-intro { padding-top: 6rem ; padding-left: 3.2rem ; }
+.caption-outro { margin-bottom: 2rem ; }
 
 /* gallery */
 .carousel { max-height: 50vh ; overflow-y: hidden ; }
-.carousel-caption { top: 4.8rem ; } /*-lg, -xl*/
+.carousel-caption { top: 4.8rem ; }
 .carousel-caption h3 { color: #007bff ; font-weight: 400 ; }
 .info-txt {  }
 .info-img { width: 360px ; }
+#ccGallery .container { margin-bottom: 4rem ; }
 #ccGallery .btn { margin-top: 1.2rem ; font-weight: 500 ; }
 
 /* overview */
@@ -54,13 +51,14 @@ a:active { text-decoration: none ; color: #006adb!important ; }
 
 /* community */
 #ccCommunity { background-color: #000000 ; background-image: url("../skyline.png") ; background-repeat: no-repeat ; background-position: left bottom ; min-height: 38vh ; display: flex ; padding-top: 2rem ; }
-#ccCommunity img { height: 4rem ; margin-top: 2rem ; margin-bottom: 2rem ; }
-#ccCommunity h3, #ccCommunity a { color: #dadada ; }
+#ccCommunity img { height: 4rem ; margin-top: 2rem ; margin-bottom: 1.2rem ; }
+#ccCommunity p, #ccCommunity a { font-size: 1.85rem ; color: #dadada ; }
 #ccCommunity .fab, #ccCommunity .fas { font-size: 2.25rem ; letter-spacing: 12px ; }
 
 @media (min-width: 576px) {
 	/* general */
-	.headline { font-size: 2.8rem ; }
+	h2 { font-size: 2.8rem ; }
+	h3 { font-size: 2.2rem ; }
 
 	/* navigation */
 	.navbar { font-size: 2rem ; }
@@ -69,19 +67,36 @@ a:active { text-decoration: none ; color: #006adb!important ; }
 	.navbar-offset::before { height: 5.6rem ; margin-top: -5.6rem ; }
 
 	/* home */
-	.caption h2 { font-size: 3.2rem ; }
 	.caption-intro { padding-top: 9rem ; }
+	.caption-intro h1 { font-size: 3.8rem ; }
+	.caption-outro h1 { font-size: 3.8rem ; }
+	.caption-outro .btn { border-width: 3px ; border-radius: 8px ; }
 }
 
 @media (min-width: 992px) {
+	/* general */
+	h2 { font-size: 3.8rem ; }
+	h3 { font-size: 2.2rem ; }
+
 	/* navigation */
 	.navbar { font-size: 2.6rem ; }
 	.navbar-brand img { height: 4.8rem ; }
 	.navbar-toggler .fa-bars { font-size: 2.4rem ; }
 	.navbar-offset::before { height: 6.8rem ; margin-top: -6.8rem ; }
 
+	/* home */
+	.caption-intro { padding-left: 4rem ; }
+	.caption-intro h1 { font-size: 5.4rem ; }
+	.caption-outro h1 { font-size: 5.4rem ; }
+	.caption-outro .btn { border-width: 4px ; border-radius: 12px ; }
+
 	/* gallery */
 	.carousel-caption { top: 6.9rem ; }
+
+	/* community */
+	#ccCommunity img { height: 5.4rem ; }
+	#ccCommunity p { font-size: 2.3rem ; }
+	#ccCommunity .fab, #ccCommunity .fas { font-size: 3rem ; letter-spacing: 12px ; }
 }
 
 @media (min-width: 1200px) {
@@ -91,8 +106,17 @@ a:active { text-decoration: none ; color: #006adb!important ; }
 	.navbar-toggler .fa-bars { font-size: 2.4rem ; }
 	.navbar-offset::before { height: 5.4rem ; margin-top: -5.4rem ; }
 
+	/* home */
+	.caption-intro { padding-left: 2rem ; }
+	.caption-intro h1 { font-size: 5.4rem ; }
+	.caption-outro h1 { font-size: 5.4rem ; }
+	.caption-outro .btn { border-width: 3px ; border-radius: 10px ; }
+
 	/* gallery */
 	.carousel-caption { top: 8.9rem ; }
+
+	/* community */
+	#ccCommunity img { margin-top: 0 ; }
 }
 
 
