--- a/w3/lib/chartacaeli.css
+++ b/w3/lib/chartacaeli.css
@@ -3,6 +3,9 @@
  */
 
 /* general */
+@font-face { font-family: 'chartacaeli-webfont' ; src: url('chartacaeli-webfont.ttf?wnmlrh') format('truetype') ; }
+.ccwf-brandicon { font-family: 'chartacaeli-webfont' ; font-style: normal ; line-height: 1 ; }
+.ccwf-brandicon::before { content: "\f880" ; }
 body { font-family: 'M PLUS Rounded 1c', sans-serif ; color: #323232 ; }
 a:hover { text-decoration: none ; color: #0056b3!important ; }
 a:active { text-decoration: none ; color: #006adb!important ; }
@@ -11,6 +14,7 @@ a:active { text-decoration: none ; color: #006adb!important ; }
 .btn { border-width: 2px ; }
 .section { margin-bottom: 4rem ; }
 .headline { padding-top: .8rem ; }
+[id ^= ccBtn], [class ^= ccBtn] { font-size: 22px ; width: 60px ; }
 
 /* navigation */
 .navbar { background: rgba(0, 0, 0, .75) ; font-size: 1.4rem ; font-weight: 500 ; letter-spacing: .125rem ; }
@@ -36,7 +40,7 @@ a:active { text-decoration: none ; color: #006adb!important ; }
 .carousel-caption h3 { color: #007bff ; font-weight: 400 ; }
 .info-txt {  }
 .info-img { width: 360px ; }
-#ccGallery .btn { margin-top: 1.2rem ; font-weight: 500 ; }
+#ccGallery div.text-center { margin-top: 1.5rem ; }
 
 /* overview */
 #ccOverview figure { max-width: 768px ; }
@@ -45,10 +49,26 @@ a:active { text-decoration: none ; color: #006adb!important ; }
 #ccFigCore {  }
 .figure-caption { padding-left: 1.2rem ; padding-right: 1.2rem ; }
 
+/* composer */
+#ccComposer .ruler-sep { margin-top: 2.25rem ; }
+#ccComposer .text-center { margin-top: 1.5rem ; }
+#ccBtnExec { max-height: 49px ; }
+#ccBtnExec .ccwf-brandicon::before { font-size: 34px ; }
+#ccBtnExec:hover .ccwf-brandicon::before { color: #ffffff ; }
+#ccBtnExec:disabled .ccwf-brandicon::before { color: #007bff ; }
+#ccXonDiv { padding: 12px 12px 12px 24px ; }
+xonomy.laic .element > .tag.opening > .attributes > .attribute > .valueContainer { font-size: 1rem ; word-break: break-all ; }
+.xonomy.laic .element > .connector > .plusminus { background-image: url(../xon-minus-primary.svg) ; background-color: #ffffff ; left: -24px }
+.xonomy.laic .element.collapsed > .connector > .plusminus { background-image: url(../xon-plus-primary.svg) ; background-color: #ffffff ; }
+.xonomy.laic .element.collapsed > .childrenCollapsed { font-size: 1.5rem ; color: #007bff ; }
+.xonomy.laic .element > .children { padding-left: 22px ; }
+#xonomyBubble.laic #xonomyBubbleContent input.textbox { font-size: 1.25rem ; }
+
 /* concepts */
 .pragma-bg-headimg { background-image: url("../starchart.png") ; background-size: contain ; background-repeat: no-repeat ; background-position: left top ; transform: scale(-1, -1) ; min-height: 100vh ; display: flex ; }
 .pragma-bg-footimg { background-image: url("../starchart.png") ; background-size: contain ; background-repeat: no-repeat ; background-position: left top ; transform: scale(-1, -1) ; left: 0 ; top: 0 ; width: 100% ; height: 100% ; margin: 0 ;  }
 .pragma-bg-opacity { left: 0 ; top: 0 ; width: 100% ; height: 100% ; margin: 0 ; background: rgba(255, 255, 255, .64) ; }
+#ccConcepts .text-sep { padding-bottom: .8rem ; font-size: 1.75rem ; color: #007bff ; }
 
 /* community */
 #ccCommunity { background-color: #000000 ; background-image: url("../skyline.png") ; background-repeat: no-repeat ; background-position: left bottom ; min-height: 38vh ; display: flex ; padding-top: 2rem ; }
@@ -57,10 +77,11 @@ a:active { text-decoration: none ; color: #006adb!important ; }
 #ccCommunity p, #ccCommunity a { font-size: 1.6rem ; color: #dadada ; }
 #ccCommunity .fab, #ccCommunity .fas { font-size: 1.85rem ; letter-spacing: 12px ; }
 
-@media (min-width: 576px) {
+@media (min-width: 576px) and (orientation: portrait) {
 	/* general */
 	h2 { font-size: 2.8rem ; }
 	h3 { font-size: 2.2rem ; }
+	[id ^= ccBtn] { width: 80px ; }
 
 	/* navigation */
 	.navbar { font-size: 2rem ; }
@@ -76,7 +97,7 @@ a:active { text-decoration: none ; color: #006adb!important ; }
 	.caption-outro .btn { border-width: 3px ; border-radius: 8px ; }
 }
 
-@media (min-width: 992px) {
+@media (min-width: 992px) and (orientation: portrait) {
 	/* general */
 	h2 { font-size: 3.8rem ; }
 
@@ -102,7 +123,15 @@ a:active { text-decoration: none ; color: #006adb!important ; }
 	#ccCommunity .fab, #ccCommunity .fas { font-size: 3rem ; letter-spacing: 12px ; }
 }
 
+@media (min-width: 992px) and (orientation: landscape) {
+	/* gallery */
+	.carousel-caption h3 { margin-top: 2rem ; }
+}
+
 @media (min-width: 1200px) {
+	/* gallery */
+	.carousel-caption h3 { margin-top: 0 ; }
+
 	/* navigation */
 	.navbar { font-size: 1.6rem ; }
 	.navbar-brand img { height: 3.8rem ; }
