--- a/w3/lib/chartacaeli.css
+++ b/w3/lib/chartacaeli.css
@@ -35,12 +35,10 @@ a:active { text-decoration: none ; color: #006adb!important ; }
 .caption-outro { margin-bottom: 2rem ; }
 
 /* gallery */
-.carousel { max-height: 50vh ; overflow-y: hidden ; }
-.carousel-caption { top: 4.8rem ; }
+.carousel-caption { padding-bottom: 0 ; position: relative ; left: auto ; right: auto ; }
 .carousel-caption h3 { color: #007bff ; font-weight: 400 ; }
 .info-txt {  }
 .info-img { width: 360px ; }
-#ccGallery div.text-center { margin-top: 1.5rem ; }
 
 /* overview */
 #ccOverview figure { max-width: 768px ; }
@@ -114,24 +112,13 @@ xonomy.laic .element > .tag.opening > .attributes > .attribute > .valueContainer
 	.caption-outro h1 { font-size: 5.4rem ; }
 	.caption-outro .btn { border-width: 4px ; border-radius: 12px ; }
 
-	/* gallery */
-	.carousel-caption { top: 6.9rem ; }
-
 	/* community */
 	#ccCommunity img.d-md-inline { height: 5.4rem ; }
 	#ccCommunity p { font-size: 2.3rem ; }
 	#ccCommunity .fab, #ccCommunity .fas { font-size: 3rem ; letter-spacing: 12px ; }
 }
 
-@media (min-width: 992px) and (orientation: landscape) {
-	/* gallery */
-	.carousel-caption h3 { margin-top: 2rem ; }
-}
-
 @media (min-width: 1200px) {
-	/* gallery */
-	.carousel-caption h3 { margin-top: 0 ; }
-
 	/* navigation */
 	.navbar { font-size: 1.6rem ; }
 	.navbar-brand img { height: 3.8rem ; }
@@ -143,9 +130,6 @@ xonomy.laic .element > .tag.opening > .attributes > .attribute > .valueContainer
 	.caption-intro h1 { font-size: 5.4rem ; }
 	.caption-outro h1 { font-size: 5.4rem ; }
 	.caption-outro .btn { border-width: 3px ; border-radius: 10px ; }
-
-	/* gallery */
-	.carousel-caption { top: 8.9rem ; }
 
 	/* community */
 	#ccCommunity img.d-md-inline { margin-top: 0 ; }
